# sssp

./: LICENSE  Makefile  README  WWW.hs  main.hs  sssp.cabal  sssp.hs
AWS/: S3P.hs
Aws/: S3P.hs  SSSP.hs
Aws/S3P/: AwsConnection.hs  Configuration.hs
Aws/SSSP/: App.hs  Configuration.hs  WWW.hs
doc/: Makefile  conf.py  index.rst
ubuntu/: util
