name                          : sssp
version                       : 1.1.0
category                      : Text
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : oss@solidsnack.be
homepage                      : http://github.com/erudify/sssp/
synopsis                      : HTTP proxy for S3.
description                   :
  An HTTP proxy for S3 that generates signed URLs for GETs and PUTs and
  proxies DELETEs. A very limited form of range queries, using semantic
  version sort and ASCII set, are supported.

cabal-version                 : >= 1.10
build-type                    : Simple
extra-source-files            : README
                              , LICENSE

source-repository               head
  type                        : git
  location                    : http://github.com/erudify/sssp.git


flag no-cli
  description                 : Disable command line tool.
  default                     : False


library
  default-language            : Haskell98
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , attempt >= 0.4
                              , attoparsec >= 0.10
                              , aws >= 0.7 && < 0.8
                              , base64-bytestring >= 1.0
                              , blaze-builder >= 0.3
                              , case-insensitive >= 0.4
                              , cereal >= 0.3.5
                              , conduit >= 0.5
                              , cryptohash >= 0.7.5
                              , data-default >= 0.4
                              , http-conduit >= 1.5
                              , http-types >= 0.6
                              , mtl >= 2
                              , network-conduit >= 0.5
                              , text >= 0.11
                              , wai >= 1.3
                              , wai-extra >= 1.3
                              , warp >= 1.3

  exposed-modules             : Aws.SSSP
                                Aws.SSSP.App
                                Aws.SSSP.Configuration
  default-extensions          : OverloadedStrings
                                ParallelListComp
                                PatternGuards
                                RecordWildCards
                                StandaloneDeriving
                                TupleSections


executable                      sssp
  default-language            : Haskell98
  main-is                     : sssp.hs
  if flag(no-cli)
    buildable                 : False
  else
    buildable                 : True

  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , attempt >= 0.4
                              , attoparsec >= 0.10
                              , aws >= 0.7 && < 0.8
                              , base64-bytestring >= 1.0
                              , blaze-builder >= 0.3
                              , case-insensitive >= 0.4
                              , cereal >= 0.3.5
                              , conduit >= 0.5
                              , cryptohash >= 0.7.5
                              , data-default >= 0.4
                              , http-conduit >= 1.5
                              , http-types >= 0.6
                              , mtl >= 2
                              , network-conduit >= 0.5
                              , text >= 0.11
                              , wai >= 1.3
                              , wai-extra >= 1.3
                              , warp >= 1.3
  default-extensions          : OverloadedStrings
                                ParallelListComp
                                PatternGuards
                                RecordWildCards
                                StandaloneDeriving
                                TupleSections
